# fair_unf

./: .gitattributes  .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  COMPARISON_ANALYSIS.md  COMPARISON_TABLE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  POLARS_ANALYSIS.md  README.md  TEST_REFERENCE_DOCUMENTATION.md  pyproject.toml
examples/: basic_usage.py  file_formats_example.py  pandas_usage.py  stata_example.py
src/ufn/: unf.py
src/unf/: __init__.py  file_io.py  normalize.py  pandas_unf.py  polars_unf.py  unf.py
tests/: __init__.py  test_file_io.py  test_normalize.py  test_pandas_unf.py  test_polars_unf.py  test_stata_reference.py  test_stata_unf.py  test_unf.py
