[project]
name = "unf"
version = "0.1.0"
description = "Universal Numerical Fingerprint (UNF) calculation for datasets"
readme = "README.md"
authors = [
    { name = "Erik Ø. Sørensen", email = "erik.sorensen@nhh.no" }
]
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
pandas = [
    "pandas>=2.0.0",
]
parquet = [
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
]
feather = [
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
]
excel = [
    "pandas>=2.0.0",
    "openpyxl>=3.0.0",
]
spss = [
    "pandas>=2.0.0",
    "pyreadstat>=1.2.0",
]
all-formats = [
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
    "openpyxl>=3.0.0",
    "pyreadstat>=1.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pandas>=2.0.0",
    "pyarrow>=10.0.0",
    "openpyxl>=3.0.0",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
